src/test/success/factorial.egern
func fact(n: int): int {
    if (n <= 0) {
        return 1
    }
    var intermediate = n * fact(n - 1)
    print(intermediate)
    return intermediate
}
fact(10)
