src/test/fail/variable_declaration_before_use_fail.egern
func square(n: int): int {
    return n * n
}

var n
var result
n = 3
result = square(n)
print(result)
